--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node http.js"
+    "start": "node http.js",
+    "test": "node test/requestTest.js"
   },
   "dependencies": {
     "geolib": "^2.0.21",
@@ -11,6 +12,12 @@
     "in-n-out": "^0.0.14",
     "nodemon": "^1.9.2",
     "rn-geolocation": "^0.0.6",
-    "xml2js":"^0.4.16"
+    "xml2js": "^0.4.16"
+  },
+  "devDependencies": {
+    "mocha": "^2.4.5",
+    "should": "^9.0.2",
+    "should-http": "0.0.4",
+    "supertest": "^1.2.0"
   }
 }
