Finalized pieces needed for travisCI
additions:

http.js:
    refactored the listen call so it changes whether it is imported or ran from CLI
    refactored loadSchedules so it returns a promise
    refactored loadSchedule so it runs off of api calls
    modified response to support JSON format of api call

package.json:
    updated test script call
    request has been added to dependencies

test/requestTest.js:
    refactored before and after calls to properly call server

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node http.js",
-    "test": "mocha"
+    "test": "mocha --timeout 15000"
   },
   "dependencies": {
     "geolib": "^2.0.21",
     "httpdispatcher": "latest",
     "in-n-out": "^0.0.14",
     "nodemon": "^1.9.2",
+    "request": "^2.72.0",
     "rn-geolocation": "^0.0.6",
     "xml2js": "^0.4.16"
   },
